Fix notification count race condition and refine mobile UI spacing

--- a/css/wx.css
+++ b/css/wx.css
@@ -642,9 +642,9 @@ body.dark-mode .notification-icon img {
     }
 
     .satellite-region-selector .option-button {
-        font-size: 8pt;
-        min-width: 40px;
-        padding: 5px 6px;
+        font-size: 7pt;
+        min-width: 32px;
+        padding: 4px 4px;
     }
 
     #prem-forecast-container .forecast-day:nth-of-type(7) {
